service worker implemented
feat: service worker implemented

Website content is now available offline for every visited page.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </section>
   </main>
 
+  <!-- <script type="application/javascript" charset="utf-8" src="js/serviceworker.js"></script> -->
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key= AIzaSyC9o1i9LtGfJmtUtDgI0C4C47oqAQyHYuk&libraries=places&callback=initMap"></script>
