--- a/restaurant.html
+++ b/restaurant.html
@@ -57,6 +57,8 @@
   <!-- End footer -->
 
   <!-- Beginning scripts -->
+  <!-- SW functions -->
+  <!-- <script type="text/javascript" src="js/serviceworker.js"></script> -->
   <!-- Database helpers -->
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
